--- a/.travis.yml
+++ b/.travis.yml
@@ -93,37 +93,24 @@ before_script:
 
 jobs:
   include:
-    # parallel_split_test cause deadlocks on mac, so testing
-    # synchronously
-    # - name: 'Acceptance tests of #backend#system'
-    #   script: bundle exec rspec spec/plugin/backend/ --tag system
-    #   os: osx
-    # - name: 'Acceptance tests of #backend#nvim'
-    #   script: bundle exec parallel_split_test spec/plugin/backend/ --tag nvim' --seed 6880
-    #   env: INSTALL_PYTHON_VERSION=3.6.1 NVIM_GUI=0
-    #   os: osx
-    # - name: 'Acceptance tests of #backend#vim8 with #viml render'
-    #   script: bundle exec rspec spec/plugin/backend/ --tag vim8 --tag ~render:lua
-    #   os: osx
-
-    - name: 'Acceptance tests of #backend#system'
-      script: bundle exec parallel_split_test spec/plugin/backend --tag system	
+    - name: 'Acceptance tests of #backend#system patterns'
+      script: bundle exec parallel_split_test spec/plugin/backend/patterns_spec.rb --tag system --tag ~render:viml
       os: linux
-    #  TODO
-    # - name: 'Acceptance tests of #backend#nvim'
-    #   script: spec/support/docker/rake RSPEC_OPTS='--tag neovim'
-    #   env: NVIM_GUI=0 DOCKER_BUILD=1
-    #   services: docker
-    #   os: linux
-    - name: 'Acceptance tests of #backend#vim8 with #viml render and #legacy parser'
-      script: bundle exec parallel_split_test spec/plugin/backend --tag vim8 --tag ~render:lua	
+    - name: 'Acceptance tests of #backend#system paths'
+      script: bundle exec parallel_split_test spec/plugin/backend/paths_spec.rb --tag system	--tag ~render:viml
       os: linux
-    - name: 'Acceptance tests of #backend#vim8 with #lua render'
-      script: bundle exec parallel_split_test spec/plugin/backend --tag vim8 --tag ~render:viml	
+    - name: 'Acceptance tests of #backend#vim8 patterns'
+      script: bundle exec parallel_split_test spec/plugin/backend/patterns_spec.rb --tag vim8
+      os: linux
+    - name: 'Acceptance tests of #backend#vim8 paths with #viml legacy render'
+      script: bundle exec parallel_split_test spec/plugin/backend/paths_spec.rb --tag vim8 --tag ~render:lua
+      os: linux
+    - name: 'Acceptance tests of #backend#vim8 paths with #lua render'
+      script: bundle exec parallel_split_test spec/plugin/backend/paths_spec.rb --tag vim8 --tag ~render:viml
       os: linux
 
-    - name: 'Acceptance tests of adapter'
-      script: bundle exec rake RSPEC_OPTS='--tag adapters'
+    - name: 'Acceptance tests adapter and modifiable features'
+      script: bundle exec rake RSPEC_OPTS='--tag adapters --tag modifiable'
       os: linux
     - name: 'Acceptance tests of commandline'
       script: bundle exec rake RSPEC_OPTS='--tag commandline'
